Revision history for Perl extension Wx.

0.51

0.50  Fri Jun 23 11:51:17 CEST 2006
	- Fixed pod tests to work with older Test::Pod releases.

0.49_07  Sun Jun 18 18:06:05 CEST 2006
	- Compilation fixes for wxWidgets 2.5.3.
	- More additions for wxWidgets 2.7.x.

0.49_06  Sun May 21 22:34:21 CEST 2006
	- Compatibility with wxWidgets CVS HEAD.
	- Added various missing functions for wxWidgets 2.6.x
	  and 2.7.x.

0.49_05  Mon May  1 18:27:14 CEST 2006
	- When Alien::wxWidgets is missing try to retrigger
	  rebuilding of the Makefile using a dummy dependency.

0.49_04  Sat Apr 22 23:36:15 CEST 2006
	- Fixed reference counting/ownership for Wx::PlDataObject.

0.49_03  Thu Apr 20 22:40:37 CEST 2006
	- Handle Alien::wxWidgets prerequisite correctly.

0.49_02  Sun Apr 16 20:45:39 CEST 2006
	- Added missing files to MANIFEST.

0.49_01  Sun Apr 16 17:01:25 CEST 2006
	- Added Wx::MediaCtrl.
	- Refactored build system, now based upon Alien::wxWidgets.

0.27  Sun Jan  1 21:13:27 CET 2006
	- Restored compatibility with wxWidgets 2.5.3.
	- Build a proper application bundle under Mac OS X.

0.26  Tue Nov 22 20:16:34 CET 2005
	- Fixed various Wx::GridBagSizer problems.
	- Fixed Original Object Return for Wx::PlGridCellEditor and
	  Wx::PlGridCellRenderer.
	- Removed the requirement of deriving from Wx::App.
	- Expanded Wx::PlWindow.
	- Added Wx::Perl::TextValidator (thanks to Johan Vromans).
	- Changed the interface for Wx::PlDataObjectSimple::GetDataHere.
	- Added Wx::BufferedDC and Wx::BufferedPaintDC.
	- Added wxStdButtonSizer.
	- Build out of the box on FreeBSD.

0.25  Sun Jul 10 20:39:30 CEST 2005
	- Added back Wx::NotebookSizer (removed by accident).
	- Fixed off-by-one error in Wx::Log::SetTimestamp.
	- Fixed crash with eval + use in event handler.
	- Fixed test suite for wxWidgets 2.4.x.

0.24  Tue Jul  5 21:42:28 CEST 2005
	- Fix using wxPerl with PAR on Linux.

0.23  Sun Jun 26 20:33:17 CEST 2005
	- Added wxArtProvider and Wx::PlArtProvider